--- a/FE/index.html
+++ b/FE/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-     <link rel="icon" type="image/png" href="/gnarAvarta.png" alt="GnarAI Icon" />
+    <link rel="icon" type="image/png" href="/AI.png" alt="GnarAI Icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GnarAI</title>
   </head>
